# CMake

./: .gitignore  CMakeLists.txt  OLASConfig.h.in  build.sh  configure.sh  main.cpp
src/SomeLibDemo/cpp/: CMakeLists.txt  adder.cpp  adder.h
src/TestSome/cpp/: CMakeLists.txt  main.cpp
src/trim/: main.cpp
trim/: CMakeLists.txt
